# my-inventory

./: .gitignore
.devcontainer/: devcontainer.json
cassandra-learning/: architecture.md  cql_operations.md  data_types.md  docker-compose.yaml
cassandra-learning/python/: pyproject.toml
database-learning/: columnar.md  features.md  history.md  normalization.md  wide-column.md
docker-learning/: network.md  overview.md
docker-learning/cli/: container.txt  context.txt  docker.txt  image.txt  run.txt  volume.txt
frontend-learning/: index.css  index.html
grpc-learning/: pyproject.toml
grpc-learning/cli/: protoc.txt
grpc-learning/grpc/: client.py  hello.proto  hello_pb2.py  hello_pb2_grpc.py  server.py
helm-learning/: overview.md
helm-learning/cli/: create.txt  get.txt  helm.txt  install.txt  list.txt  (+1 more)
jenkins-learning/: docker-compose.yaml
k8s-learning/: overview.md
langchain-learning/hello-world/: pyproject.toml
langchain-learning/hello-world/hello_world/: test.py
langchain-learning/hello-world/hello_world.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
langchain-learning/hello-world/hello_world/endpoints/: hello_world.py
mermaid-learning/: microservices-architecture.md  test.md
mydev-stack/: CV_ThuanBQ_2025.docx  CV_ThuanBQ_2025_multi-phases.docx  README.md  cicd.md  cloud.md  container.md  database.md  design.md  microservice.md  programming.md  projects.md  svc.md
projectdocs-learning/: README.md  development-guide.md  installation.md  license.md
system-design/: architecture.md
uv-learning/: uv.python.txt  uv.txt  uv.venv
(+149 files in other folders)
